--- a/index.html
+++ b/index.html
@@ -1,108 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Fair Trade Coffee</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link
+            href="https://fonts.googleapis.com/css?family=Roboto"
+            rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 <body>
-    <div class="container">
-        <h1 style="text-align: center;">Fair Trade Coffee</h1>
-        <hr>
-        <p style="text-align: center;">Prove the authenticity of coffee using the Ethereum blockchain.</p>
-    </div>
+<div class="container">
+    <h1 style="text-align: center;">Fair Trade Coffee</h1>
+    <hr/>
+    <p style="text-align: center;">
+        Prove the authenticity of coffee using the Ethereum blockchain.
+    </p>
+</div>
 
-    <div id="ftc-harvest">
-        <h2>Product Overview</h2>
-        <div class="form-group">
-            SKU
-            <br>
-            <input class="input-field" type="number" id="sku" name="sku" value=1><br>
-            UPC
-            <br>
-            <input type="number" id="upc" name="upc" value=1><br>
-            Current Owner ID
-            <br>
-            <input type="text" id="ownerID" name="ownerID" value="0x963865f57804b38459dd4b2da2f760211a200438" size="50"><br>
-            <div class=button-div>
-                <button class="btn-fetchOne" id="button" type="button" data-id="9">Fetch Data 1</button>
-                <button class="btn-fetchTwo" id="button" type="button" data-id="10">Fetch Data 2</button>
-            </div>
+<div id="ftc-harvest">
+    <h2>Product Overview</h2>
+    <div class="form-group">
+        SKU
+        <br/>
+        <input
+                class="input-field"
+                type="number"
+                id="sku"
+                name="sku"
+                disabled
+        /><br/>
+        UPC
+        <br/>
+        <input type="number" id="upc" name="upc"/><br/>
+        Current Owner ID
+        <br/>
+        <input
+                type="text"
+                id="ownerID"
+                name="ownerID"
+                size="50"
+                disabled
+        /><br/>
+        <div class="button-div">
+            <button class="btn-fetchOne" id="button-9" type="button" data-id="9">
+                Fetch Data 1
+            </button>
+            <button
+                    class="btn-fetchTwo"
+                    id="button-10"
+                    type="button"
+                    data-id="10"
+            >
+                Fetch Data 2
+            </button>
         </div>
-        <div class=form-break></div>
-        <h2>Farm Details</h2>
-        <div class="form-group">
-            Farmer ID
-            <br>
-            <input type="text" id="originFarmerID" name="originFarmerID" value="0x99c289eb2aacec289631a5ddf62cf27a63d4494f"
-                size="50"><br>
-            Farm Name
-            <br>
-            <input type="text" id="originFarmName" name="originFarmName" value="John Doe"><br>
-            Farm Information
-            <br>
-            <input type="text" id="originFarmInformation" name="originFarmInformation" value="Yarra Valley"><br>
-            Farm Latitude
-            <br>
-            <input type="text" id="originFarmLatitude" name="originFarmLatitude" value="-38.239770"><br>
-            Farm Longitude
-            <br>
-            <input type="text" id="originFarmLongitude" name="originFarmLongitude" value="144.341490"><br>
-            <br>
-            <button class="btn-harvest" id="button" type="button" data-id="1">Harvest</button>
-            <button class="btn-process" id="button" type="button" data-id="2">Process</button>
-            <button class="btn-pack" id="button" type="button" data-id="3">Pack</button>
-            <button class="btn-forsale" id="button" type="button" data-id="4">ForSale</button>
-        </div>
-        <div class=form-break></div>
-        <h2>Product Details</h2>
-        <div class="form-group">
-            Product Notes
-            <br>
-            <input type="text" id="productNotes" name="productNotes" value="Best beans for Espresso" size="60"><br>
-            Product Price
-            <br>
-            <input type="number" id="productPrice" name="productPrice" value=1>ETH<br>
-            Distributor ID
-            <br>
-            <input type="text" id="distributorID" name="distributorID" value="0xf1b1bcd24dad92303dd9fe78be639f7bcf9c238d"
-                size="50">
-            <br>
-            Retailer ID
-            <br>
-            <input type="text" id="retailerID" name="retailerID" value="0x0fb2bfefd526966c87efa19f6693d50971763fc2"
-                size="50"><br>
-            Distributor ID
-            <br>
-            <input type="text" id="consumerID" name="consumerID" value="0x5d777e9127b28fb119e81a6304278a0a21bef1c4"
-                size="50"><br>
-            <br>
-            <button class="btn-buy" id="button" type="button" data-id="5">Buy</button>
-            <button class="btn-ship" id="button" type="button" data-id="6">Ship</button>
-            <button class="btn-receive" id="button" type="button" data-id="7">Receive</button>
-            <button class="btn-purchase" id="button" type="button" data-id="8">Purchase</button>
-        </div>
-        <div class=form-break></div>
-        <hr>
     </div>
-
-    <h2>Transaction History<span id="ftc-history"></span></h2>
-    <div>
-        <ul id="ftc-events">
-            <!-- Events will appear here from app.js -->
-        </ul>
-        <br>
-        <hr>
+    <div class="form-break"></div>
+    <h2>Farm Details</h2>
+    <div class="form-group">
+        Farmer ID
+        <br/>
+        <input
+                type="text"
+                id="originFarmerID"
+                name="originFarmerID"
+                size="50"
+        /><br/>
+        Farm Name
+        <br/>
+        <input type="text" id="originFarmName" name="originFarmName"/><br/>
+        Farm Information
+        <br/>
+        <input
+                type="text"
+                id="originFarmInformation"
+                name="originFarmInformation"
+        /><br/>
+        Farm Latitude
+        <br/>
+        <input
+                type="text"
+                id="originFarmLatitude"
+                name="originFarmLatitude"
+        /><br/>
+        Farm Longitude
+        <br/>
+        <input
+                type="text"
+                id="originFarmLongitude"
+                name="originFarmLongitude"
+        /><br/>
+        <br/>
+        <button class="btn-harvest" id="button-1" type="button" data-id="1">
+            Harvest
+        </button>
+        <button class="btn-process" id="button-2" type="button" data-id="2">
+            Process
+        </button>
+        <button class="btn-pack" id="button-3" type="button" data-id="3">
+            Pack
+        </button>
+        <button class="btn-forsale" id="button-4" type="button" data-id="4">
+            ForSale
+        </button>
     </div>
+    <div class="form-break"></div>
+    <h2>Product Details</h2>
+    <div class="form-group">
+        Product ID
+        <br/>
+        <input
+                type="number"
+                id="productID"
+                name="productID"
+                size="60"
+                disabled
+        /><br/>
+        Product Notes
+        <br/>
+        <input
+                type="text"
+                id="productNotes"
+                name="productNotes"
+                size="60"
+        /><br/>
+        Product Price
+        <br/>
+        <input type="number" id="productPrice" name="productPrice"/>ETH<br/>
+        Item state
+        <br/>
+        <input
+                type="number"
+                id="itemState"
+                name="itemState"
+                size="60"
+                disabled
+        /><br/>
+        Distributor ID
+        <br/>
+        <input type="text" id="distributorID" name="distributorID" size="50" disabled/>
+        <br/>
+        Retailer ID
+        <br/>
+        <input type="text" id="retailerID" name="retailerID" size="50" disabled/><br/>
+        Consumer ID
+        <br/>
+        <input type="text" id="consumerID" name="consumerID" size="50" disabled/><br/>
+        <br/>
+        <button class="btn-buy" id="button-5" type="button" data-id="5">
+            Buy
+        </button>
+        <button class="btn-ship" id="button-6" type="button" data-id="6">
+            Ship
+        </button>
+        <button class="btn-receive" id="button-7" type="button" data-id="7">
+            Receive
+        </button>
+        <button class="btn-purchase" id="button-8" type="button" data-id="8">
+            Purchase
+        </button>
+    </div>
+    <div class="form-break"></div>
+    <hr/>
+</div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- <script src="js/web3.min.js"></script> -->
-    <script src="js/truffle-contract.js"></script>
-    <script src="js/app.js"></script>
+<h2>Transaction History<span id="ftc-history"></span></h2>
+<div>
+    <ul id="ftc-events">
+        <!-- Events will appear here from app.js -->
+    </ul>
+    <br/>
+    <hr/>
+</div>
+
+<div id="ftc-roles">
+    <h2>Manage roles</h2>
+    <div class="form-group">
+        Account
+        <br/>
+        <input
+                class="input-field"
+                type="string"
+                id="account"
+                name="account"
+        /><br/>
+        <div class="button-div">
+            <button class="btn-addFarmer" id="button-add-farmer" type="button" data-id="11">
+                Add farmer
+            </button>
+            <button
+                    class="btn-addDistributor"
+                    id="button-add-distributor"
+                    type="button"
+                    data-id="12"
+            >
+                Add distributor
+            </button>
+            <button
+                    class="btn-addRetailer"
+                    id="button-add-retailer"
+                    type="button"
+                    data-id="13"
+            >
+                Add retailer
+            </button>
+            <button
+                    class="btn-addConsumer"
+                    id="button-add-consumer"
+                    type="button"
+                    data-id="14"
+            >
+                Add consumer
+            </button>
+        </div>
+    </div>
+    <div class="form-break"></div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!--<script src="js/web3.min.js"></script>-->
+<script src="js/truffle-contract.js"></script>
+<script src="js/app.js"></script>
 </body>
-
 </html>
