UML diagrams, README, polishing code

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         /><br/>
         Product Price
         <br/>
-        <input type="number" id="productPrice" name="productPrice"/>ETH<br/>
+        <input type="number" id="productPrice" name="productPrice"/>Wei<br/>
         Item state
         <br/>
         <input
